<resources>
    <string name="app_name">Rahal</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change password</string>
    <string name="submit">Submit</string>
    <string name="renter_your_password">Renter your password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="get_started">Get Started</string>
    <string name="by_creating_a_free_account">by creating a free account.</string>
    <string name="verification_code">Verification Code</string>
    <string name="recommended_plans">Recommended plans</string>
    <string name="your_plans">Your Plans</string>
    <string name="FAQ_body">Which plan is right for me? Our plans – Basix, Original, Comfort and Premium – cover a whole gamut of travel experiences. To find out which one has ‘You’ written all over it, visit our Are trips physically demanding? Want to lie in a hammock and not move until cocktail hour? We’ve got a trip for that. Want to power up the side of a mountain at high altitude? We’ve also got a trip for that. To determine what type of trip suits you best, each of our trips comes with a Physical Rating to let you know how physically demanding it is… or isn’t.</string>
    <string name="description">Description</string>
    <string name="body">The Bibliotheca Alexandrina aims to be: A center of excellence in the production and dissemination of knowledge and to be a place of dialogue, learning and understanding between cultures and peoples.</string>
    <string name="recommended">Recommended</string>
    <string name="top_rated_places">Top rated places</string>
    <string name="search">Search...</string>
    <string name="your_plan">Your Plan</string>
    <string name="favourites">Favourites</string>
    <string name="nothing_added_to_favorites_yet">Nothing added to favorites yet!</string>
    <string name="on_recent_views">on recent views</string>
    <string name="view_all">View all</string>
    <string name="activities">Activities</string>
    <string name="add_to_plan">Add To Plan</string>
    <string name="place_name">place name</string>
    <string name="review">Review</string>
    <string name="_1220">1220 </string>
    <string name="our_working_hours_are_from_9_00am_to_6_00pm">Our working hours are from 9:00AM to 6:00PM</string>
    <string name="location">Location</string>
    <string name="sunday_friday">Sunday - Friday</string>
    <string name="_10_30">10$ - 30$</string>
    <string name="price_range">Price Range:</string>
    <string name="city">City</string>
    <string name="title">title</string>
</resources>